# ERP_V2_Postgres

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  ERP_V2_Postgres_context.md  README.md  ROADMAP.md  app_config.json  docker-compose.yml  environment.yml  main.py  project_code_context.md  pyproject.toml  requirements.txt  run_server.py  uv.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
.learnings/: ERRORS.md
backend/ai/: llm_dispatcher.py
backend/api/: ai_router.py
backend/config/: config_manager.py  setting.py  settings.py
backend/core/: __init__.py  bootstrap.py  business_ops.py  core_logic.py  finance_engine.py
backend/database/: __init__.py  crud.py  crud_base.py  crud_finance.py  crud_sys.py  custom_schema.py  db_engine.py  schema.py
backend/models/: README.md
backend/observability/: logger.py
backend/services/: __init__.py  ai_service.py  analysis_service.py  auth_service.py  dashboard_service.py  excel_service.py  export_service.py  file_service.py  flow_service.py  import_service.py  project_service.py
backend/utils/: __init__.py  formatters.py  logger.py
docs/: README.md
docs/rfc/: .gitkeep
frontend/: .gitignore  package.json
scripts/: ci.py  generate_env_example.py
streamlit_lab/: app.py  components.py  debug_kit.py  project_code_context.md  sidebar_manager.py  🏠_Dashboard.py
streamlit_lab/.streamlit/: config.toml
streamlit_lab/experiments/: ex01_risk_engine.py  ex02_biz_analysis.py  ex02_main_contract_custom.py  ex02_主合同管理页面自定义.py
streamlit_lab/pages/: 01_📂_项目看板.py  02_🛠️_主合同管理.py  03_📊_数据分析.py  03_🛠️_分包合同管理.py  04_📊_数据分析.py  (+6 more)
tests/: conftest.py  export_to_md.py  fix_db.py  generate_mock_data.py  run_server.py  test_ai_parsing.py  test_business_formulas.py  test_database.py  test_finance_scenario.py  test_formatters.py  test_risk_control.py  type_checker.py
