[project]
name = "erp-v2-postgres"
version = "0.1.0"
description = "ERP V2 with PostgreSQL and SQLite support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit",
    "pandas",
    "openpyxl",
    "requests",
    "ollama",
    "plotly",
    "watchdog",
    "psycopg2-binary==2.9.9",
    "sqlalchemy==2.0.48",
    "tabulate",
    "werkzeug",
    "PyPDF2",
    "python-docx",
    "openai",
    "python-dotenv>=1.0.0",
    "loguru",
    "llama-cpp-python==0.3.31",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pytest",
    "ruff",
    "mypy",
    "pre-commit",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
ignore = ["E501"]
select = ["B", "E", "F", "I", "SIM", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
"streamlit_lab/*" = ["E402"]
"scripts/*" = ["E402"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_implicit_optional = false
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disable_error_code = ["assignment", "attr-defined", "empty-body"]
